Adding placeholder from template to en master for Accessibility key.

--- a/po/en.po
+++ b/po/en.po
@@ -2,16 +2,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2019-07-25 14:55+0300\n"
+"PO-Revision-Date: 2020-09-22 12:47+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.3\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+msgid "{{title}}"
+msgstr ""
 
 msgid "Copy value to clipboard"
 msgstr "Copy {{value}} to clipboard"
@@ -20,9 +23,6 @@ msgid "Copied to clipboard"
 msgstr ""
 
 msgid "value"
-msgstr ""
-
-msgid "{{title}}"
 msgstr ""
 
 msgid "{{paragraph }}"
@@ -40,13 +40,18 @@ msgstr ""
 msgid "Close"
 msgstr ""
 
-msgid "This service is developed and maintained by Digital and Population Data Services Agency"
+msgid ""
+"This service is developed and maintained by Digital and Population Data "
+"Services Agency"
 msgstr ""
 
 msgid "Information about the service"
 msgstr ""
 
 msgid "Description of file"
+msgstr ""
+
+msgid "Accessibility"
 msgstr ""
 
 msgid "User support"
@@ -56,6 +61,9 @@ msgid "Feedback"
 msgstr ""
 
 msgid "Sourcecode is licensed under EUPL-1.2 license."
+msgstr ""
+
+msgid "Content has been licensed with CC by 4.0 license."
 msgstr ""
 
 msgid "Contact"
@@ -121,9 +129,6 @@ msgid ""
 msgstr ""
 
 msgid "Required"
-msgstr ""
-
-msgid "Content has been licensed with CC by 4.0 license."
 msgstr ""
 
 #~ msgid "UNFINISHED"
